--- a/index.html
+++ b/index.html
@@ -8,14 +8,55 @@
             href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
             rel="stylesheet"
         />
-
-        <link rel="stylesheet" href="css/icon.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+        <div class="navigation">
+            <input
+                type="checkbox"
+                id="nav-toggle"
+                class="navigation__checkbox"
+            />
+
+            <label for="nav-toggle" class="navigation__button"
+                ><span class="navigation__icon">&nbsp;</span></label
+            >
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"
+                            ><span>01.</span>About Natours</a
+                        >
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"
+                            ><span>02.</span>Your benfits</a
+                        >
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"
+                            ><span>03.</span>Popular tours</a
+                        >
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"
+                            ><span>04.</span>Stories</a
+                        >
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"
+                            ><span>05.</span>Book now</a
+                        >
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <header class="header">
             <div class="header__logo-box">
                 <img
@@ -72,14 +113,29 @@
                     <div class="col-6">
                         <div class="composition">
                             <img
+                                srcset="
+                                    img/nat-1.jpg        300w,
+                                    img/nat-1-large.jpg 1000w
+                                "
+                                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
                                 src="img/nat-1-large.jpg"
                                 alt="Image 1"
                                 class="composition__photo composition__photo--p1"
                             /><img
+                                srcset="
+                                    img/nat-2.jpg        300w,
+                                    img/nat-2-large.jpg 1000w
+                                "
+                                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
                                 src="img/nat-2-large.jpg"
                                 alt="Image 2"
                                 class="composition__photo composition__photo--p2"
                             /><img
+                                srcset="
+                                    img/nat-3.jpg        300w,
+                                    img/nat-3-large.jpg 1000w
+                                "
+                                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
                                 src="img/nat-3-large.jpg"
                                 alt="Image 3"
                                 class="composition__photo composition__photo--p3"
@@ -140,7 +196,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="text-center m-bottom-8">
                     <h2 class="heading-secondary">Most popular tours</h2>
                 </div>
@@ -176,7 +232,7 @@
                                         <p class="card__price-value">$297</p>
                                     </div>
                                     <a
-                                        href="#"
+                                        href="#popup"
                                         class="btn btn--white btn--animated"
                                         >Book now!</a
                                     >
@@ -215,7 +271,7 @@
                                         <p class="card__price-value">$497</p>
                                     </div>
                                     <a
-                                        href="#"
+                                        href="#popup"
                                         class="btn btn--white btn--animated"
                                         >Book now!</a
                                     >
@@ -254,7 +310,7 @@
                                         <p class="card__price-value">$897</p>
                                     </div>
                                     <a
-                                        href="#"
+                                        href="#popup"
                                         class="btn btn--white btn--animated"
                                         >Book now!</a
                                     >
@@ -335,7 +391,7 @@
                 </div>
             </section>
             <section class="section-book">
-                <div class="row">
+                <div class="row row--big">
                     <div class="book">
                         <div class="book__form">
                             <form action="#" class="form">
@@ -417,7 +473,11 @@
         <footer class="footer">
             <div class="footer__logo-box">
                 <img
-                    src="./img/logo-green-2x.png"
+                    srcset="
+                        ./img/logo-green-1x.png 1x,
+                        ./img/logo-green-2x.png 2x
+                    "
+                    src="./img/logo-green-2x.png 2x"
                     alt="logo"
                     class="footer__logo"
                 />
@@ -461,5 +521,35 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" class="popup__img" />
+                    <img src="img/nat-9.jpg" class="popup__img" />
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary m-bottom-small">
+                        Start booking now
+                    </h2>
+                    <h3 class="heading-tertiary m-bottom-small">
+                        Important &ndash; Please read these terms before booking
+                    </h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Sequi deserunt natus et consequuntur dolorem
+                        accusantium nesciunt quos at voluptas dolor, corrupti
+                        maiores necessitatibus non exercitationem neque est
+                        placeat ex in? Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Harum maiores aperiam possimus ipsa
+                        est ea, voluptas assumenda minima soluta praesentium
+                        placeat libero temporibus magnam autem aut, repudiandae
+                        commodi accusantium velit!
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
